--- a/src/App.scss
+++ b/src/App.scss
@@ -63,27 +63,38 @@ h1 {
 
 /******   header   ******/
 #Header {
+    font-size: 1.1em;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
     outline: none;
     user-select: none;
-    padding: 0.7em;
-    @include for-phone-only {
-        margin: 0.3em auto 0 auto;
-    }
+    padding-top: 0.7em;
+    padding-bottom: 0.7em;
+    z-index: 100;
+    width: 100%;
+    transition: 0.1s;
+}
+
+.HeaderFixed {
+    font-size: 0.95em !important;
+    position: fixed;
+    top: 0;
+    background-image: url(components/home/files/Background.jpg);
+    border-bottom: solid 1px #a4a4a4;
+    z-index: 100;
+    box-shadow: 0 4px 2px -2px rgba(208, 208, 208, 0.5);
 }
 .HeaderButton {
     width: 10em;
-    @include for-phone-only {
-        margin-top: 0.3em;
-        width: 7em;
+    @include for-phones-tablets-only {
+        padding-top: 0.6em;
     }
     a, button {
         font-weight: 500;
         letter-spacing: 1px;
-        font-size: 1.3em;
+        font-size: 1em;
         padding: 1em 0 5px 0;
         background: linear-gradient(#565656, #565656) no-repeat center bottom;
         background-size: 0 2px;
@@ -91,9 +102,6 @@ h1 {
         cursor: pointer;
         border: none;
         outline: none; /* Убрать подсвечивание кнопок в Хроме */
-        @include for-phone-only {
-            font-size: 1.1em;
-        }
         &:hover {
             background-size: 100% 2px;
         }
@@ -103,7 +111,7 @@ h1 {
     @extend .HeaderButton;
     border: none;
     width: 22em;
-    margin-top: 0.8em;
+    margin: 0.8em auto auto;
     @include for-phone-only {
         width: 12em;
     }
@@ -112,7 +120,29 @@ h1 {
 /*******************************************************************/
 /***              ***     DarkMode Button   ***                 ***/
 /*****************************************************************/
-.Toggle {
+
+#DarkModeButton {
+    width: 80px;
+    @include for-phones-tablets-only {
+        padding-top: 0.6em;
+    }
+}
+
+.ToggleButtonFixed {
+    width: 20px !important;
+    height: 20px !important;
+    top: 2px !important;
+    left: 14px !important;
+}
+
+.ToggleBackgroundFixed:before {
+    height: 14px !important;
+}
+#Checkbox:checked + .ToggleBackgroundFixed span {
+    transform: translateX(22px) !important;
+}
+
+.ToggleBackground {
     position: relative;
     display: block;
     width: 42px;
@@ -121,19 +151,20 @@ h1 {
     -webkit-tap-highlight-color: transparent;
     transform: translate3d(0, 0, 0);
 }
-.Toggle:before {
+.ToggleBackground:before {
     content: "";
     position: relative;
-    top: 2px;
+    top: 5px;
     left: 15px;
     width: 40px;
-    height: 22px;
+    height: 16px;
     display: block;
-    background: #77777a;
+    background: #969696;
     border-radius: 12px;
     transition: background 0.2s ease;
 }
-.Toggle span {
+
+.ToggleBackground span {
     position: absolute;
     top: 1px;
     left: 15px;
@@ -142,35 +173,15 @@ h1 {
     display: block;
     background: #ffffff;
     border-radius: 50%;
-    box-shadow: 0 2px 6px rgba(154,153,153,0.75);
+    box-shadow: 0 2px 6px rgba(107, 107, 107, 0.85);
     transition: all 0.2s ease;
 }
-.Toggle span svg {
-    margin: 7px;
-    fill: none;
-}
-.Toggle span svg path {
-    stroke: #adaeb3;
-    stroke-width: 2;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-    stroke-dasharray: 24;
-    stroke-dashoffset: 0;
-    transition: all 0.5s linear;
-}
-#Checkbox:checked + .Toggle:before {
+#Checkbox:checked + .ToggleBackground:before {
     background: #7dff83;
 }
-#Checkbox:checked + .Toggle span {
+#Checkbox:checked + .ToggleBackground span {
     transform: translateX(18px);
 }
-#Checkbox:checked + .Toggle span path {
-    stroke: #51d421;
-    stroke-dasharray: 25;
-    stroke-dashoffset: 25;
-}
-
-
 
 /*******************************************************************/
 /***                 ***     HOMEPAGE   ***                     ***/
@@ -411,6 +422,7 @@ h1 {
         margin: 6em auto 0;
     }
     .CalculatorDisplayValue {
+        background: white;
         border-style: solid;
         border-radius: 0.6em;
         border-width: 2px;
@@ -459,7 +471,7 @@ h1 {
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 5em auto 0 auto;
+    margin: 3em auto 0 auto;
 }
 .GalleryThumbnail {
     border: 1px solid rgba(121, 121, 121, 0.39);
@@ -528,12 +540,14 @@ h1 {
     }
 }
 .WheelCheckDescription {
-    font-size: 1.2em;
-    margin-top: 2em;
+    font-size: 1.1em;
+    margin-top: 1em;
+    padding-right: 1em;
+    padding-left: 1em;
     color: rgba(0, 0, 0, 0.66)
 }
 #Mouse {
-    padding-top: 8em;
+    padding-top: 7em;
     content: url("components/mousewheelChecker/files/mouse.png");
     position: relative;
     float: right;
